# collage-generator

./: .editorconfig  .gitignore  LICENSE  README.md
backend/: alembic.ini  logging.conf  pyproject.toml  setup.cfg
backend/collages/: __init__.py  constants.py  errors.py  extensions.py  settings.py
backend/collages/data/: entities.py  tables.py  types.py
backend/collages/generators/: random_generator.py
backend/collages/http/: __init__.py  error_handlers.py  fields.py  schemas.py  security.py
backend/collages/http/controllers/api/: __init__.py  auth.py  base.py  collages.py  images.py  users.py
backend/collages/services/: __init__.py  auth.py  collages.py  images.py  security.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 75f4e843726f_initial_migration.py
docs/: api.http
frontend/: .browserslistrc  .eslintrc.json  babel.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/src/: App.tsx  index.css  index.html  index.tsx  store.ts
frontend/src/api/: auth.ts  base.ts  collages.ts  index.ts  users.ts
frontend/src/components/blocks/: AccountDropdown.tsx  DeleteCollage.tsx  EditableText.tsx  ImageWithLightbox.tsx  index.ts
frontend/src/components/elements/: FullPageLoader.tsx  Logo.tsx  NoImage.tsx  index.ts
frontend/src/components/forms/: Input.tsx
frontend/src/components/icons/: LogoIcon.tsx  PlusCircleIcon.tsx  index.ts
frontend/src/components/layout/: BlankPageLayout.tsx  Footer.tsx  Header.tsx  LayoutContainer.tsx  RegularPageLayout.tsx  index.ts
frontend/src/components/ui/: Alert.tsx  Button.tsx  ButtonLink.tsx  DropdownLink.tsx  Modal.tsx  NavItem.tsx  index.ts
frontend/src/features/: auth.ts  index.ts
frontend/src/hooks/: auth.ts
frontend/src/models/: entities.ts  forms.ts  http.ts
frontend/src/pages/: LoginPage.tsx  ProfilePage.tsx  ProtectedPage.tsx  RegisterPage.tsx  index.ts
frontend/src/pages/CollagePage/: Component.tsx  Container.tsx  GenerateButton.tsx  Uploader.tsx  index.ts
frontend/src/pages/CollagesPage/: AddCollage.tsx  Component.tsx  (+2 more)
frontend/src/styles/: app-base.css  app-components.css  app-utilities.css
(+1 files in other folders)
